--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,15 @@ ul {
   margin-bottom: 6px;
 }
 
+a {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+a:visited {
+  color: black;
+}
+
 .container {
   border: 1px solid black;
   border-radius: 3px;
@@ -54,7 +63,7 @@ ul {
   text-align: center;
 }
 
-.section-city li::first-letter{
+.section-city li::first-letter {
   text-transform: capitalize;
 }
 
@@ -74,6 +83,11 @@ ul {
   display: inline-block;
   margin: 0;
   font-size: 25px;
+}
+
+.celsius-fahrenheit {
+  font-size: 15px;
+  margin-top: -10px;
 }
 
 .main-icons {
