--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ a:visited {
   border: 1px solid black;
   border-radius: 3px;
   max-width: 700px;
-  margin: 20px auto 0;
+  margin: 25px auto 0;
   padding: 10px;
 }
 
@@ -106,7 +106,7 @@ a:visited {
 }
 
 .section-forecast {
-  margin: 0 15px;
+  margin: 0 15px 3px;
 }
 
 .next-hours {
